test_programs/compile_failure/fv_attribute_name_resolution_3/src/main.nr
fn main(x: Field, y: pub Field) {
    assert(x != y);
}

#[ensures(result > y)]
fn foo(x: Field) -> Field {
  x + x
}
